log
Wed 23 Aug 2023 07:21:07 PM UTC: 
 list.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
2c8950a
Wed 23 Aug 2023 07:34:49 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
b90afea
Wed 23 Aug 2023 07:35:12 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
ac9d332
Wed 23 Aug 2023 07:39:19 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
7a05256
Wed 23 Aug 2023 07:41:04 PM UTC: 
 list.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
1b6812c
Wed 23 Aug 2023 07:44:21 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
b408ca4
Thu 24 Aug 2023 05:31:22 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:45:10: error: incompatible types when returning type ‘List’ {aka ‘struct List’} but ‘void *’ was expected
   45 |   return *actual;
      |          ^~~~~~~
list.c:46:1: error: control reaches end of non-void function [-Werror=return-type]
   46 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8e3e99d
Thu 24 Aug 2023 05:31:38 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:45:10: error: incompatible types when returning type ‘Node’ but ‘void *’ was expected
   45 |   return *(actual -> head);
      |          ^~~~~~~~~~~~~~~~~
list.c:46:1: error: control reaches end of non-void function [-Werror=return-type]
   46 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ee5021b
Thu 24 Aug 2023 05:31:49 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
4d8e048
Thu 24 Aug 2023 05:33:08 PM UTC: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
118e693
Thu 24 Aug 2023 06:02:38 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
f581ffb
Thu 24 Aug 2023 06:04:25 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
56449fc
Thu 24 Aug 2023 06:06:04 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0e89f8a
Thu 24 Aug 2023 06:07:35 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
56fdaa0
Thu 24 Aug 2023 06:07:47 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
5632dad
Thu 24 Aug 2023 06:11:03 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  1|5
total_score: 10/70
419159c
Thu 24 Aug 2023 07:54:56 PM UTC: 
 list.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  0|0
9767ba7
Thu 24 Aug 2023 07:55:46 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
68725fc
Thu 24 Aug 2023 07:58:45 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
5d31e80
Thu 24 Aug 2023 08:04:15 PM UTC: 
 list.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 25/70
12b591d
Thu 24 Aug 2023 08:31:57 PM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  0|0
0ec3de9
Thu 24 Aug 2023 08:33:03 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
35d1822
Thu 24 Aug 2023 08:33:31 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f5c176a
Thu 24 Aug 2023 08:34:07 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3deb817
Thu 24 Aug 2023 08:35:42 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
5bc19c2
Thu 24 Aug 2023 08:53:28 PM UTC: 
 list.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  0|0
4d5d546
Thu 24 Aug 2023 08:54:13 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
d9f4a84
Fri 25 Aug 2023 05:55:07 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
6d8d07b
Fri 25 Aug 2023 05:59:18 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
77847da
Fri 25 Aug 2023 06:01:55 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a319bc1
Fri 25 Aug 2023 06:02:49 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
fc4331c
Fri 25 Aug 2023 06:05:48 PM UTC: 
 list.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
b684189
Fri 25 Aug 2023 06:06:45 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
37c7c34
Fri 25 Aug 2023 06:42:01 PM UTC: 
 list.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  0|0
37d354b
Fri 25 Aug 2023 06:44:24 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ed2670e
Fri 25 Aug 2023 06:45:55 PM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
c9dd892
Fri 25 Aug 2023 06:52:53 PM UTC: 
 list.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
 tests:  0|0
ff50a62
Fri 25 Aug 2023 08:25:57 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
75bf6a3
Fri 25 Aug 2023 08:31:39 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
b457841
Fri 25 Aug 2023 08:31:56 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4ee8455
Fri 25 Aug 2023 08:34:36 PM UTC: 
 list.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:135:14: error: ‘List’ {aka ‘struct List’} has no member named ‘data’
  135 |   return list->data ;
      |              ^~
list.c:136:1: error: control reaches end of non-void function [-Werror=return-type]
  136 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
2035929
Fri 25 Aug 2023 08:34:49 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
fb7c9ce
Fri 25 Aug 2023 08:35:30 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  10|2
total_score: 45/70
2c1a763
Fri 25 Aug 2023 08:36:52 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
b03c5be
Fri 25 Aug 2023 08:37:14 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
88b2609
Fri 25 Aug 2023 08:37:27 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
04a55c4
Fri 25 Aug 2023 08:37:41 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
6a4aefc
Fri 25 Aug 2023 08:37:50 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
5479b63
Fri 25 Aug 2023 08:38:28 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  10|2
total_score: 45/70
460097b
Fri 25 Aug 2023 08:41:04 PM UTC: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  10|2
total_score: 45/70
b053750
Fri 25 Aug 2023 08:42:18 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
58295b5
Fri 25 Aug 2023 08:42:27 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c5c5ecb
Fri 25 Aug 2023 08:43:33 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4715b7b
Fri 25 Aug 2023 08:43:49 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
51b62da
